package io.slc.sma;

import io.slc.jsm.interpreter.Buffer;

class Loader
{
    Runtime load(Buffer program, String... args)
    {
        throw new UnsupportedOperationException("Not implemented yet.");
    }
}