@startuml "SLC Interpreter design"

package vm.interpreter {
    interface Interpreter
    class Buffer
}

package slc_interpreter {
    class SlcInterpreter<R extends Runtime>
    interface Loader<R extends Runtime>
    interface InstructionSet<R extends Runtime>
    interface Instruction<R extends Runtime>
    interface Runtime
    class ExecutionResult

    SlcInterpreter --|> Interpreter
    SlcInterpreter o-- Loader
    SlcInterpreter o-- InstructionSet
    SlcInterpreter --> Buffer : runs with
    Loader --> Runtime : initializes
    InstructionSet *-- "n" Instruction
    Instruction --> ExecutionResult : produces
}

@enduml
